# master-thesis

./: .gitignore  README.md
app/: pyproject.toml
app/src/app/: crop_tables.py  hough_lines.py  main.py  table_content_eval.py  util.py  validation_util.py
app/src/app/plans/: detect.py  handlers.py  import_export.py  load.py  plans_detect.py  plans_handlers.py  plans_import_export.py  plans_load.py  plans_read.py  read.py
app/src/app/signals/: signal_parse.py
app/src/app/table_plans/: csv.py  csv_import_export.py  detect_files.py  detect_plans.py  handlers.py  load.py  main.py  pdf_read.py
app/src/app/table_plans/parsers/: row_mapping.py  signals.py
app/src/app/table_plans/tables/: crop.py  ocr.py
app/src/app/table_plans/validation/: rules.py  validator.py
app/src/app/tables/: crop.py  ocr.py  table_crop.py  table_ocr.py
app/src/app/topology_plans/: find_lines.py  find_switches.py  line_segments.py  main.py  point.py  thresholds.py  topology_graph.py  vector.py  visualization.py
app/src/app/topology_plans/validation/: checker.py  rules.py  validator.py
app/src/app/util/: geometry.py  images.py  validation.py  vector.py
