[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Laura Rost",email = "git@laurarost.de"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "img2table (>=1.4.1,<2.0.0)",
    "python-doctr[torch] (>=0.11.0,<0.12.0)",
    "opencv-contrib-python-headless (>=4.11.0.86,<5.0.0.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
