[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Laura Rost",email = "git@laurarost.de"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "img2table (>=1.4.1,<2.0.0)",
    "python-doctr[torch] (>=0.11.0,<0.12.0)",
    "yaramo @ git+https://github.com/simulate-digital-rail/yaramo@yaramo2",
    "planpro-exporter @ git+https://github.com/simulate-digital-rail/planpro-exporter@yaramo2",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
    "networkx (>=3.5,<4.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
